<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".LocalDatabase">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewUserID"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/user_id"
            android:textColor="#F8F6F6"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#FDFDFD" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewUserFName"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/user_firstName"
            android:textColor="#F8F6F6"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputFName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#FDFDFD" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewUserLName"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/user_lastName"
            android:textColor="#F8F6F6"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputLName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#FDFDFD" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewUserPhone"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/user_phoneNumber"
            android:textColor="#F8F6F6"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#FDFDFD" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewUserEmail"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/user_emailAddress"
            android:textColor="#F8F6F6"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#FDFDFD" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bttn_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bttn_insert"
            app:backgroundTint="#8CAC94" />

        <Button
            android:id="@+id/bttn_updateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/bttn_update"
            app:backgroundTint="#8AA9C1" />

        <Button
            android:id="@+id/bttn_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/bttn_find"
            app:backgroundTint="#DAD39A" />

        <Button
            android:id="@+id/bttn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/bttn_delete"
            app:backgroundTint="#C59393" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/firebaseandlocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/localandfirebase"
            android:textColor="#F8F6F6"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputUserIDFirebase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/localandfirebasehint"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="#FDFDFD"
            android:textColorHint="#E3DDA7" />
    </LinearLayout>

    <TextView
        android:id="@+id/firebaseandlocal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:gravity="center_horizontal"
        android:text="@string/localandfirebase2"
        android:textColor="#F8F6F6"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bttn_fetchandcombine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/bttn_fetch"
        app:backgroundTint="#DFB4C3" />
</LinearLayout>