<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".ChangeWeather">

    <TextView
        android:id="@+id/weatherSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bttn5"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/purple_200" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/newLoc"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#CDEAED"
            android:entries="@array/locations"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/bttn_ChangeLocation"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/change"
        android:textColor="#070707"
        android:background="#CDEAED"
        android:textStyle="bold" />
        />
</LinearLayout>